// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ABOUT-PROJECT compare Page against snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  box-sizing: border-box;
  width: 100%;
  height: inherit;
  border-radius: 0;
  background: linear-gradient(60deg, #556cd6 75%, #000 150%);
  color: #fff;
}

@media (min-width:0px) {
  .emotion-1 {
    padding: 1.5rem 1.5rem 1.5rem 1.5rem;
  }
}

@media (min-width:600px) {
  .emotion-1 {
    padding: 2rem 3rem 2rem 3rem;
  }
}

@media (min-width:900px) {
  .emotion-1 {
    padding: 3rem 2.5rem 3rem 2.5rem;
  }
}

.emotion-3 {
  padding: 0 0 1rem 0;
  margin: 0;
}

.emotion-4 {
  font-size: 1rem;
  margin-bottom: 1rem;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 1rem;
}

@media (min-width:0px) {
  .emotion-5 {
    padding: 0rem 2rem 3rem 2rem;
  }
}

@media (min-width:600px) {
  .emotion-5 {
    padding: 0rem 2rem 3rem 2rem;
  }
}

@media (min-width:1200px) {
  .emotion-5 {
    padding: 0rem 4rem 3rem 4rem;
  }
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 100%;
}

@media (min-width:600px) {
  .emotion-7 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 100%;
  }
}

@media (min-width:900px) {
  .emotion-7 {
    -webkit-flex-basis: 75%;
    -ms-flex-preferred-size: 75%;
    flex-basis: 75%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 75%;
  }
}

.emotion-8 {
  padding: 0rem 0rem 4rem 0rem;
}

.emotion-10 {
  box-sizing: border-box;
  width: 100%;
  height: inherit;
  border-radius: 0;
  background: inherit;
  color: inherit;
}

@media (min-width:0px) {
  .emotion-10 {
    padding: 1.5rem 1.5rem 3rem 1.5rem;
  }
}

@media (min-width:600px) {
  .emotion-10 {
    padding: 2rem 3rem 4rem 3rem;
  }
}

@media (min-width:900px) {
  .emotion-10 {
    padding: 3rem 2.5rem 2.5rem 2.5rem;
  }
}

.emotion-14 {
  margin: 0 0 2rem 0;
  padding: 0;
  width: 100%;
}

.emotion-15 {
  padding-top: 2rem;
}

.emotion-16 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.9375rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 8px 22px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #fff;
  background-color: #556cd6;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
}

.emotion-16::-moz-focus-inner {
  border-style: none;
}

.emotion-16.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-16 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-16:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59, 75, 149);
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
}

@media (hover: none) {
  .emotion-16:hover {
    background-color: #556cd6;
  }
}

.emotion-16:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.emotion-16.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-16.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-17 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-32 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 100%;
  -ms-flex-preferred-size: 100%;
  flex-basis: 100%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 100%;
}

@media (min-width:600px) {
  .emotion-32 {
    -webkit-flex-basis: 100%;
    -ms-flex-preferred-size: 100%;
    flex-basis: 100%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 100%;
  }
}

@media (min-width:900px) {
  .emotion-32 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
  }
}

.emotion-33 {
  background-color: #fff;
  color: rgba(0, 0, 0, 0.87);
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);
}

.emotion-34 {
  color: rgba(0, 0, 0, 0.87);
  background-color: #fff;
  padding: 1rem;
}

.emotion-35 {
  font-size: 1.5rem;
  padding-bottom: 0.5rem;
  color: inherit;
}

.emotion-36 {
  font-size: 0.9rem;
  color: inherit;
}

.emotion-37 {
  cursor: pointer;
  color: inherit;
  background-color: transparent;
  -webkit-text-decoration: underline;
  text-decoration: underline;
  text-decoration-style: dotted;
  text-decoration-color: inherit;
  text-decoration-thickness: 1px;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  display: inline-block;
  width: 100%;
}

<div>
  <div
    class="emotion-0"
  >
    <div
      style="margin-bottom: 2rem;"
    >
      <div
        class="com-layout-section section-0 MuiBox-root emotion-1"
      >
        <div
          class="emotion-0"
        >
          <h2
            class="emotion-3"
          >
            Project
          </h2>
          <div
            class="emotion-4"
          >
            The story of this project
          </div>
        </div>
      </div>
    </div>
    <div
      class="emotion-5"
    >
      <div
        class="MuiGrid-root MuiGrid-container page-module emotion-6"
      >
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-md-9 emotion-7"
        >
          <div
            class="emotion-8"
          >
            <div
              class="emotion-0"
            >
              <div
                class="com-layout-section undefined MuiBox-root emotion-10"
              >
                <div
                  class="emotion-0"
                >
                  <h2
                    class="emotion-3"
                  >
                    the Log
                  </h2>
                  <div
                    class="emotion-4"
                  >
                    some lessons learned while programming this project
                  </div>
                  <div
                    class="emotion-14"
                  >
                    <div
                      class="react-multi-carousel-list container-with-dots "
                    >
                      <ul
                        class="react-multi-carousel-track "
                        style="transition: none; overflow: unset; transform: translate3d(0px,0,0);"
                      />
                    </div>
                  </div>
                  <div
                    class="emotion-15"
                  >
                    <button
                      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButtonBase-root emotion-16"
                      tabindex="0"
                      type="button"
                    >
                      See all
                      <span
                        class="MuiTouchRipple-root emotion-17"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="com-layout-section undefined MuiBox-root emotion-10"
              >
                <div
                  class="emotion-0"
                >
                  <h2
                    class="emotion-3"
                  >
                    Roadmap?
                  </h2>
                  <div
                    class="emotion-4"
                  >
                    where this project comes from?
                  </div>
                  <div
                    class="emotion-15"
                  >
                    <button
                      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButtonBase-root emotion-16"
                      tabindex="0"
                      type="button"
                    >
                      See all
                      <span
                        class="MuiTouchRipple-root emotion-17"
                      />
                    </button>
                  </div>
                </div>
              </div>
              <div
                class="com-layout-section undefined MuiBox-root emotion-10"
              >
                <div
                  class="emotion-0"
                >
                  <h2
                    class="emotion-3"
                  >
                    Sitemap
                  </h2>
                  <div
                    class="emotion-4"
                  >
                    are you lost or looking for something?
                  </div>
                  <div
                    class="emotion-15"
                  >
                    <button
                      class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButtonBase-root emotion-16"
                      tabindex="0"
                      type="button"
                    >
                      See all
                      <span
                        class="MuiTouchRipple-root emotion-17"
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-12 MuiGrid-grid-md-3 emotion-32"
        >
          <div
            style="padding-left: 1rem; padding-right: 0.5rem;"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 emotion-33"
            >
              <div
                class="emotion-34"
              >
                <div
                  class="emotion-35"
                >
                  See also
                </div>
                <div
                  class="emotion-36"
                >
                  <a
                    href="/about/log"
                    style="flex: 1; display: flex; width: 100%;"
                  >
                    <span
                      class="emotion-37"
                    >
                      Project's log
                    </span>
                  </a>
                </div>
                <div
                  class="emotion-36"
                >
                  <a
                    href="/about/timeline"
                    style="flex: 1; display: flex; width: 100%;"
                  >
                    <span
                      class="emotion-37"
                    >
                      Project's timeline
                    </span>
                  </a>
                </div>
                <div
                  class="emotion-36"
                >
                  <a
                    href="/podcasts"
                    style="flex: 1; display: flex; width: 100%;"
                  >
                    <span
                      class="emotion-37"
                    >
                      Podcasts Dashboard
                    </span>
                  </a>
                </div>
                <div
                  class="emotion-36"
                >
                  <a
                    href="/movies/stories/topics"
                    style="flex: 1; display: flex; width: 100%;"
                  >
                    <span
                      class="emotion-37"
                    >
                      Movie topics
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ABOUT-PROJECT compare against snapshot 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.emotion-1 {
  padding: 0 0 1rem 0;
  margin: 0;
}

.emotion-2 {
  font-size: 1rem;
  margin-bottom: 1rem;
}

.emotion-3 {
  padding-top: 2rem;
}

.emotion-4 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  font-weight: 500;
  font-size: 0.9375rem;
  line-height: 1.75;
  letter-spacing: 0.02857em;
  text-transform: uppercase;
  min-width: 64px;
  padding: 8px 22px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #fff;
  background-color: #556cd6;
  box-shadow: 0px 3px 1px -2px rgba(0,0,0,0.2),0px 2px 2px 0px rgba(0,0,0,0.14),0px 1px 5px 0px rgba(0,0,0,0.12);
}

.emotion-4::-moz-focus-inner {
  border-style: none;
}

.emotion-4.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-4 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-4:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgb(59, 75, 149);
  box-shadow: 0px 2px 4px -1px rgba(0,0,0,0.2),0px 4px 5px 0px rgba(0,0,0,0.14),0px 1px 10px 0px rgba(0,0,0,0.12);
}

@media (hover: none) {
  .emotion-4:hover {
    background-color: #556cd6;
  }
}

.emotion-4:active {
  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.2),0px 8px 10px 1px rgba(0,0,0,0.14),0px 3px 14px 2px rgba(0,0,0,0.12);
}

.emotion-4.Mui-focusVisible {
  box-shadow: 0px 3px 5px -1px rgba(0,0,0,0.2),0px 6px 10px 0px rgba(0,0,0,0.14),0px 1px 18px 0px rgba(0,0,0,0.12);
}

.emotion-4.Mui-disabled {
  color: rgba(0, 0, 0, 0.26);
  box-shadow: none;
  background-color: rgba(0, 0, 0, 0.12);
}

.emotion-5 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

<div>
  <div
    class="emotion-0"
  >
    <h2
      class="emotion-1"
    >
      Project
    </h2>
    <div
      class="emotion-2"
    >
      The story of this project
    </div>
    <div
      class="emotion-3"
    >
      <button
        class="MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeLarge MuiButton-containedSizeLarge MuiButtonBase-root emotion-4"
        tabindex="0"
        type="button"
      >
        See all
        <span
          class="MuiTouchRipple-root emotion-5"
        />
      </button>
    </div>
  </div>
</div>
`;
